# kps9566-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: fuzz.yml  msrv.yml
data/: EUCKP.TXT  KPS9566.TXT
fuzz/: Cargo.toml
fuzz/artifacts/encode_decode_roundtrip/: crash-af60e4993d759170cc363e0e9d11882468b28afb
fuzz/fuzz_targets/: encode_decode_roundtrip.rs  no_panic.rs
src/: euckp.rs  iso2022kp.rs  kps9566.rs  lib.rs
