[package]
name = "kps9566-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kps9566 = { path = ".." }

[[bin]]
name = "no_panic"
path = "fuzz_targets/no_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encode_decode_roundtrip"
path = "fuzz_targets/encode_decode_roundtrip.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
